Artix/BetterDiscord/themes/boo.theme.css
/**
 * @name boo
 * @author Gibbu#1211
 * @version 2.0.0
 * @description Changes Discord enough to give it a fresh feel while also making it darker. Supports both Light and Dark themes
 * @invite ZHthyCw
 * @authorId 174868361040232448
 * @donate https://paypal.me/IanRGibson
 * @website https://github.com/Gibbu/BetterDiscord-Themes/tree/master/MinimalCord
 * @source https://github.com/monstrousdev/themes/theme-files/Reborn.theme.css
*/

@import url('https://discordstyles.github.io/MinimalCord/base.css');
@import url('https://gibbu.github.io/BetterDiscord-Themes/addons/bottomhsl.css');
@import url('https://gibbu.github.io/BetterDiscord-Themes/HorizontalServerlist/base.css');
@import url('https://gibbu.github.io/BetterDiscord-Themes/RadialStatus/base.css');

:root {


  --code-bg: var(--white-d1);
  --background: #fffcfd;	
  --background-alt: #f6f2f1;
  --background-dark: #F8EFEE;
  --font: 'SF UI Display', Regular ;	
  --font-weight-light: 300;
  --font-weight-normal: 400;
  --font-weight-semibold: 500;
  --font-weight-bold: 600;
  --accent: 240,194,189;
  --message-padding: 5px;
  --message-spacing: 5px;
  --HSL-server-icon-size: 40px;
  --HSL-server-spacing: 12px;
  --rs-small-spacing: 2px;
  --rs-large-spacing: 3px;
  --rs-width: 2px;
  --rs-avatar-shape: 50%;
  --rs-online-color: #a2dec3;
  --rs-idle-color: #ffdd75;
  --rs-dnd-color: #ffb2b2;
  --rs-offline-color: #636b75;
  --rs-streaming-color: #643da7;
  --rs-invisible-color: #747f8d;
}

#app-mount .headerSpotify-zpWxgT {
  background: #b4e0c0;
  }

#app-mount .headerPlaying-j0WQBV {
  background: #ffcb9e;  
  }

 #app-mount .wrapper-2jXpOf.modeUnread-1qO3K1 .icon-1DeIlz {
  color: #edc2c4; 


 #app-mount .jumpToPresentBar-G1R9s6 .barButtonMain-3K-jeJ {
  display: Jump To Present;
} 

